--- a/styles.css
+++ b/styles.css
@@ -94,9 +94,21 @@ h2 {
 main .seccion-2 
 img{
     background-color: rgb(44, 137, 137);
-    width: 100%;    
+    width: 100%;
+    padding: 0;    
 }
 
+.greeting {
+    background-color: #b82b2b;
+    padding: 0;
+
+}
+
+.greeting p {
+    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
+}
 /*seccion trabajos*/
 
 .trabajos {
